# neural-network-final-work

./: README.md  main.py  pyproject.toml  requirements.txt
entregable-02/: main.py
